[tool.poetry]
authors = ["Rocky Burt <rocky.burt@gmail.com>"]
description = ""
name = "rocky-wheels"
packages = [{include = "pythonapp"}]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
